# Autotracking_Surgical_Lamp

./: .gitignore  README.md
CAD/Lamp_Arm/: DeepGrooveBearing.step  EncoderMountV4.SLDPRT  EncoderMountV4.STL  HeadLampCover.SLDPRT  HeadLampCover.STL  HeadLamp_V4.SLDPRT  HeadLamp_V4.STL  LampConnectorV12.SLDPRT  LampConnectorV12.STL  Link1_P1.SLDPRT  Link1_P1.STL  Link1_P2.SLDPRT  Link1_P2.STL  Link2_V3.SLDPRT  Link2_V3.STL  Link3_V4.SLDPRT  Link3_V4.STL  Link4_V5.SLDPRT  Link4_V5.STEP  Link4_V5.STL  MagnetMount_V2.SLDPRT  MagnetMount_V2.STL
CAD/Remote/: RemoteNEW_Back_V1.SLDPRT  RemoteNEW_Back_V1.STL  RemoteNEW_Body_V1.SLDPRT  RemoteNEW_Body_V1.STL  RemoteNEW_Cover_V1.SLDPRT  RemoteNEW_Cover_V1.STL
Electrical/Surgery_Lamp_Control_Board/: MAX485.kicad_sch  Surgery_Lamp_Control_Board_BOM.csv
Electrical/Surgery_Lamp_Control_Board/KiCad/: #auto_saved_files#  .gitignore  A4988.kicad_sch  PCA9685.kicad_sch  Surgery_Lamp_Control_PCB.kicad_pcb  Surgery_Lamp_Control_PCB.kicad_prl  Surgery_Lamp_Control_PCB.kicad_pro  Surgery_Lamp_Control_PCB.kicad_sch  Surgery_Lamp_Control_PCB.kicad_sch-bak  Surgery_Lamp_Control_PCB.step  _autosave-MAX485.kicad_sch  _autosave-Surgery_Lamp_Control_PCB.kicad_pcb  _autosave-Surgery_Lamp_Control_PCB.kicad_prl  _autosave-Surgery_Lamp_Control_PCB.kicad_pro  ~Surgery_Lamp_Control_PCB.kicad_sch.lck
Electrical/schematic/: #auto_saved_files#  Alec_Lib.bak  Alec_Lib.kicad_sym  schematic.kicad_prl  schematic.kicad_pro  schematic.kicad_sch  sym-lib-table  ~schematic.kicad_sch.lck
Firmware/: platformio.ini
Firmware/controllers/lib/EncoderLib/: EncoderLib.cpp
Firmware/controllers/lib/LightMode/: LightMode.cpp
Firmware/controllers/lib/StepperJoint/: StepperJoint.h
Firmware/controllers/src/mcu1/: main.cpp
Firmware/controllers/src/mcu2/: main.cpp
Firmware/controllers/src/mcu3/: main.cpp
Firmware/lib/CommandParser/: CommandParser.cpp  CommandParser.h
Firmware/lib/Controller/: Controller.cpp  Controller.h
Firmware/lib/ControllerLib/: ControllerLib.cpp  ControllerLib.h
Firmware/lib/EncoderLib/: EncoderLib.cpp  EncoderLib.h
Firmware/lib/LightMode/: LightMode.cpp  LightMode.h
Firmware/lib/ServoJoint/: ServoJoint.cpp  ServoJoint.h
Firmware/lib/StepperJoint/: StepperJoint.cpp  StepperJoint.h
Firmware/lib/encoderLib/: EncoderLib.cpp  EncoderLib.h  encoderLib.cpp  encoderLib.h
Firmware/mcu1/lib/surgBotLib/: surgBotLib.cpp  surgBotLib.h
Firmware/mcu1/src/: main.cpp
Firmware/remote/: remote_receiver.ino  remote_transmitter.ino
Firmware/src/mcu1/: main.cpp
Firmware/src/mcu2/: main.cpp
Firmware/src/mcu3/: main.cpp
Firmware/src/mcu4/: main.cpp
Firmware/src_mcu1/: main.cpp
Firmware/test/test_encoderLib/: test_encoderLib.cpp
firmware/esp32_camera_stream/src/: main.cpp
install/: local_setup.sh  setup.sh
install/hand_tracker/share/hand_tracker/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/surg_bot/share/surg_bot/: local_setup.sh  package.bash  package.sh  package.zsh
install/surg_bot_description/share/surg_bot_description/: local_setup.sh  package.sh
install/surg_bot_gazebo/share/surg_bot_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
ros2_ws/: README.md  requirements.txt  setup.sh
ros2_ws/src/2d_kinematics/: setup.py
ros2_ws/src/camera_calibration/: package.xml
ros2_ws/src/camera_estimation_2d/: setup.cfg  setup.py
ros2_ws/src/camera_estimation_2d/camera_estimation_2d/: hand_position_publisher.py
ros2_ws/src/camera_estimation_2d/test/: test_camera.py
ros2_ws/src/command_manager/: README  package.xml  setup.cfg  setup.py
ros2_ws/src/controller_coms/: package.xml  setup.cfg  setup.py
ros2_ws/src/esp_cam_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/goal_pose_computer/: package.xml  setup.py
ros2_ws/src/goal_pose_executor/: CMakeLists.txt  package.xml
ros2_ws/src/goal_pose_executor/launch/: full_system.launch.py  goal_pose_executor.launch.py
ros2_ws/src/goal_pose_executor/src/: goal_pose_executor.cpp
ros2_ws/src/hand_tracker/: README.md  setup.py
ros2_ws/src/kinect_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/kinect_interface/kinect_interface/: kinect_interface.py
ros2_ws/src/kinect_interface/src/: kinect2_node.cpp
ros2_ws/src/kinematics_2d/: package.xml  setup.cfg  setup.py
ros2_ws/src/moveit_planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/serial_coms/: README  package.xml  setup.py
ros2_ws/src/surg_bot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/surg_bot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/surg_lamp_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/surg_lamp_msgs/msg/: LampJointCommands.msg  LampStatus.msg  LampTargetPose.msg
ros2_ws/surgBot/surgBot/: CMakeLists.txt  package.xml
ros2_ws/surgBot/surgBotDescription/: CMakeLists.txt  package.xml
ros2_ws/surgBot/surgbot/: README.md  package.xml
ros2_ws/surgBot/surgbot_description/: CMakeLists.txt  package.xml
ros2_ws/surg_bot/surg_bot/: CMakeLists.txt  README.md
ros2_ws/surg_bot/surg_bot_description/: package.xml
src/hand_tracker/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/surg_bot/install/: local_setup.sh  setup.sh
src/surg_bot/log/: latest_build
src/surg_bot/surg_bot/: CMakeLists.txt
src/surg_bot/surg_bot_description/: package.xml
(+198 files in other folders)
